--- a/DEH-REQIF/DEH-REQIF.csproj
+++ b/DEH-REQIF/DEH-REQIF.csproj
@@ -9,6 +9,7 @@
 	<Company>RHEA System S.A.</Company>
 	<Copyright>Copyright 2022 RHEA System S.A.</Copyright>
 	<PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
+	<RepositoryUrl>https://github.com/RHEAGROUP/DEH-REQIF.git</RepositoryUrl>
 	<RepositoryType>Git</RepositoryType>
 	<PackageTags>ReqIF ECSS-E-TM-10-25 COMET</PackageTags>
 	<Authors>Sam Gerené</Authors>
