[Add] settings reader

--- a/DEH-REQIF-APP/DEH-REQIF.Console.csproj
+++ b/DEH-REQIF-APP/DEH-REQIF.Console.csproj
@@ -12,6 +12,7 @@
 	  <RepositoryUrl>https://github.com/RHEAGROUP/DEH-REQIF.git</RepositoryUrl>
 	  <RepositoryType>Git</RepositoryType>
 	  <Authors>Sam Gerené</Authors>
+	  <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
