--- a/DEH-REQIF.Console.Tests/DEH-REQIF.Console.Tests.csproj
+++ b/DEH-REQIF.Console.Tests/DEH-REQIF.Console.Tests.csproj
@@ -9,6 +9,7 @@
 	  <RepositoryType>Git</RepositoryType>
       <RootNamespace>DEHReqIF.Console.Tests</RootNamespace>
 	  <IsPackable>false</IsPackable>
+	  <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
 	<ItemGroup>
