--- a/DEH-REQIF.Tests/DEH-REQIF.Tests.csproj
+++ b/DEH-REQIF.Tests/DEH-REQIF.Tests.csproj
@@ -9,6 +9,7 @@
 	<RepositoryType>Git</RepositoryType>
 	<RootNamespace>DEHReqIF.Tests</RootNamespace>
     <IsPackable>false</IsPackable>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -30,6 +31,19 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DEH-REQIF\DEH-REQIF.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="TestData\export-settings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="TestData\ProR_Traceability-Template-v1.0.reqif">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
