--- a/DEH-REQIF-APP/DEH-REQIF.Console.csproj
+++ b/DEH-REQIF-APP/DEH-REQIF.Console.csproj
@@ -25,17 +25,13 @@
 
 	<ItemGroup>
 		<PackageReference Include="Autofac" Version="6.4.0" />
-		<PackageReference Include="AutofacSerilogIntegration" Version="5.0.0" />
+		<PackageReference Include="CDP4ServicesDal-CE" Version="8.1.0" />
+		<PackageReference Update="Microsoft.Extensions.Configuration.FileExtensions" Version="6.0.0" />
+		<PackageReference Update="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
-		<PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions " Version="2.0.2" />
-		<PackageReference Include="Microsoft.Extensions.Configuration.Json " Version="2.0.2" />
 		<PackageReference Include="Microsoft.Extensions.CommandLineUtils" Version="1.1.1" />
-		<PackageReference Include="Serilog" Version="2.11.0" />
-		<PackageReference Include="Serilog.Enrichers.Environment" Version="2.2.0" />
-		<PackageReference Include="Serilog.Enrichers.Thread" Version="3.1.0" />
-		<PackageReference Include="Serilog.Settings.Configuration" Version="3.3.0" />
-		<PackageReference Include="Serilog.Sinks.Console" Version="4.0.1" />
-		<PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
+		<PackageReference Include="NLog" Version="5.0.1" />
+		<PackageReference Include="NLog.Extensions.Logging" Version="5.0.1" />
 	</ItemGroup>
 
   <ItemGroup>
@@ -46,11 +42,6 @@
     <None Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Update="Microsoft.Extensions.Configuration.FileExtensions" Version="6.0.0" />
-    <PackageReference Update="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
   </ItemGroup>
 
 </Project>
