--- a/DEH-REQIF-APP/appsettings.json
+++ b/DEH-REQIF-APP/appsettings.json
@@ -1,1 +1,17 @@
-{}
+{
+  "NLog": {
+    "targets": {
+      "console": {
+        "type": "Console",
+        "layout": "${longdate}|${uppercase:${level}}|${logger} => ${message} ${exception:format=tostring}"
+      }
+    },
+      "rules": [
+        {
+          "logger": "*",
+          "minLevel": "Warn",
+          "writeTo": "console"
+        }
+      ]
+    }
+  }
