--- a/DEH-REQIF-APP/DEH-REQIF.Console.csproj
+++ b/DEH-REQIF-APP/DEH-REQIF.Console.csproj
@@ -1,48 +1,47 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-      <OutputType>Exe</OutputType>
-      <TargetFramework>net6.0</TargetFramework>
-	  <RootNamespace>DEHReqIF.Console</RootNamespace>
-	  <Version>0.1.0</Version>
-	  <Description>A Coomandline application used to convert an E-TM-10-25 data source into a ReqIF document.</Description>
-	  <Company>RHEA System S.A.</Company>
-	  <Copyright>Copyright 2022 RHEA System S.A.</Copyright>
-	  <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
-	  <RepositoryUrl>https://github.com/RHEAGROUP/DEH-REQIF.git</RepositoryUrl>
-	  <RepositoryType>Git</RepositoryType>
-	  <Authors>Sam Gerené</Authors>
-	  <LangVersion>latest</LangVersion>
-  </PropertyGroup>
+    <PropertyGroup>
+        <OutputType>Exe</OutputType>
+        <TargetFramework>net7.0</TargetFramework>
+        <RootNamespace>DEHReqIF.Console</RootNamespace>
+        <Version>0.2.0</Version>
+        <Description>A Commandline application used to convert an E-TM-10-25 data source into a ReqIF document.</Description>
+        <Company>RHEA System S.A.</Company>
+        <Copyright>Copyright 2022-2023 RHEA System S.A.</Copyright>
+        <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
+        <RepositoryUrl>https://github.com/RHEAGROUP/DEH-REQIF.git</RepositoryUrl>
+        <RepositoryType>Git</RepositoryType>
+        <Authors>Sam Gerené</Authors>
+        <LangVersion>latest</LangVersion>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <None Remove="Resources\ascii-art.txt" />
-  </ItemGroup>
+    <ItemGroup>
+        <None Remove="Resources\ascii-art.txt" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\ascii-art.txt" />
-  </ItemGroup>
+    <ItemGroup>
+        <EmbeddedResource Include="Resources\ascii-art.txt" />
+    </ItemGroup>
 
-	<ItemGroup>
-		<PackageReference Include="Autofac" Version="6.4.0" />
-		<PackageReference Include="CDP4ServicesDal-CE" Version="8.1.0" />
-		<PackageReference Include="Microsoft.Extensions.Configuration.Json" />
-		<PackageReference Update="Microsoft.Extensions.Configuration.FileExtensions" Version="6.0.0" />
-		<PackageReference Update="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
-		<PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
-		<PackageReference Include="Microsoft.Extensions.CommandLineUtils" Version="1.1.1" />
-		<PackageReference Include="NLog" Version="5.0.1" />
-		<PackageReference Include="NLog.Extensions.Logging" Version="5.0.1" />
-	</ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="Autofac" Version="7.0.1" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.Json" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="7.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
+        <PackageReference Include="Microsoft.Extensions.CommandLineUtils" Version="1.1.1" />
+        <PackageReference Include="NLog" Version="5.0.1" />
+        <PackageReference Include="NLog.Extensions.Logging" Version="5.0.1" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\DEH-REQIF\DEH-REQIF.csproj" />
-  </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\DEH-REQIF\DEH-REQIF.csproj" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <None Update="appsettings.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-  </ItemGroup>
+    <ItemGroup>
+        <None Update="appsettings.json">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
+    </ItemGroup>
 
 </Project>
