--- a/DEH-REQIF-APP/DEH-REQIF.Console.csproj
+++ b/DEH-REQIF-APP/DEH-REQIF.Console.csproj
@@ -4,7 +4,7 @@
         <OutputType>Exe</OutputType>
         <TargetFramework>net8.0</TargetFramework>
         <RootNamespace>DEHReqIF.Console</RootNamespace>
-        <Version>1.0.0</Version>
+        <Version>1.0.1</Version>
         <Description>A Commandline application used to convert an E-TM-10-25 data source into a ReqIF document.</Description>
         <Company>RHEA System S.A.</Company>
         <Copyright>Copyright 2022-2024 RHEA System S.A.</Copyright>
@@ -13,6 +13,11 @@
         <RepositoryType>Git</RepositoryType>
         <Authors>Sam Gerené</Authors>
         <LangVersion>latest</LangVersion>
+        <PackageReleaseNotes>
+            [Update] to net8
+        </PackageReleaseNotes>
+        <PackageIcon>cdp4-comet-logo.png</PackageIcon>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
     </PropertyGroup>
 
     <ItemGroup>
@@ -42,6 +47,11 @@
         <None Update="appsettings.json">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </None>
+    </ItemGroup>
+
+    <ItemGroup>
+        <None Include="..\cdp4-comet-logo.png" Pack="true" PackagePath="\" />
+        <None Include="..\README.md" Pack="true" PackagePath="\" />
     </ItemGroup>
 
 </Project>
