--- a/DEH-REQIF/DEH-REQIF.csproj
+++ b/DEH-REQIF/DEH-REQIF.csproj
@@ -3,7 +3,7 @@
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
         <RootNamespace>DEHReqIF</RootNamespace>
-        <Version>2.0.0</Version>
+        <Version>2.0.1</Version>
         <Description>A .NET library to conver ECSS-E-TM-10-25 requirements to an OMG ReqIF file.</Description>
         <PackageId>DEH-ReqIF</PackageId>
         <Company>Starion Group S.A.</Company>
@@ -18,7 +18,7 @@
         <IncludeSymbols>true</IncludeSymbols>
         <SymbolPackageFormat>snupkg</SymbolPackageFormat>
         <PackageReleaseNotes>
-            [Initial Version]
+            [Update] dependencies
         </PackageReleaseNotes>
         <LangVersion>latest</LangVersion>
         <PackageIcon>cdp4-comet-logo.png</PackageIcon>
