[Rename] project folder

--- a/DEH-REQIF.Console.Tests/DEH-REQIF.Console.Tests.csproj
+++ b/DEH-REQIF.Console.Tests/DEH-REQIF.Console.Tests.csproj
@@ -33,7 +33,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\DEH-REQIF-APP\DEH-REQIF.Console.csproj" />
+        <ProjectReference Include="..\DEH-REQIF.Console\DEH-REQIF.Console.csproj" />
     </ItemGroup>
 
     <ItemGroup>
