--- a/DEH-REQIF.Console/DEH-REQIF.Console.csproj
+++ b/DEH-REQIF.Console/DEH-REQIF.Console.csproj
@@ -4,7 +4,7 @@
         <OutputType>Exe</OutputType>
         <TargetFramework>net9.0</TargetFramework>
         <RootNamespace>DEHReqIF.Console</RootNamespace>
-        <Version>2.0.1</Version>
+        <Version>3.0.0</Version>
         <Description>A Commandline application used to convert an E-TM-10-25 data source into a ReqIF document.</Description>
         <Company>Starion Group S.A.</Company>
         <Copyright>Copyright 2022-2024 Starion Group S.A.</Copyright>
@@ -14,7 +14,8 @@
         <Authors>Sam Gerené</Authors>
         <LangVersion>latest</LangVersion>
         <PackageReleaseNotes>
-            [Update] dependencies
+            [Update] to net9.0
+            [Update] Autofac to version 8.1.1
         </PackageReleaseNotes>
         <PackageIcon>cdp4-comet-logo.png</PackageIcon>
         <PackageReadmeFile>README.md</PackageReadmeFile>
